<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="80dp"/>

    <ImageButton
        android:id="@+id/btnTesoura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnPedra"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_marginTop="50dp"
        android:padding="10dp"
        android:src="@drawable/tesoura"
        android:background="@color/tesoura"
        android:contentDescription="@string/tesoura"/>

    <ImageButton
        android:id="@+id/btnPedra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/btnTesoura"
        app:layout_constraintEnd_toStartOf="@id/btnPapel"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_marginTop="50dp"
        android:padding="10dp"
        android:src="@drawable/pedra"
        android:background="@color/pedra"
        android:contentDescription="@string/pedra"/>

    <ImageButton
        android:id="@+id/btnPapel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/btnPedra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_marginTop="50dp"
        android:padding="10dp"
        android:src="@drawable/papel"
        android:background="@color/papel"
        android:contentDescription="@string/papel"/>

    <TextView
        android:id="@+id/escolha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userChoice"
        android:textSize="24sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnPapel"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/cpu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cpuChoice"
        android:textSize="24sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/escolha"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textSize="24sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cpu"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/placar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textSize="24sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/result"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"/>


    <Button
        android:id="@+id/btnJogar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newPlayer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/placar"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="80dp"
        android:backgroundTint="@color/newPlayer"
        app:cornerRadius="0dp"
        android:textColor="@color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>